--- a/menu.html
+++ b/menu.html
@@ -70,9 +70,12 @@
         <li>Add chicken $4.00</li>
         <li>Add shrimp $7.00</li>
     </ul>
+
+    <div class="note">
     <p>
         Add a small Caesar, or small Greek salad to any meal for $4 or a House Salad for $3
     </p>
+    </div>
 
     <!-- PIZZAS -->
     <h3>House made pizzas</h3>
@@ -98,7 +101,7 @@
         Start with house made pizza sauce and mozzarella cheese then add any two toppings of your choice
     </p>
 
-    <h6>Pizza toppings</h6>
+    <h3>Pizza toppings</h3>
     <ul>
         <li>Anchovies</li>
         <li>Bacon</li>
@@ -111,7 +114,9 @@
         <li>Roasted Poblano Peppers</li>
         <li>Sausage</li>
     </ul>
+    <div class="toppings">
     <p>Additional Toppings $1</p>
+    </div>
 
     <!-- SANDWICHES -->
     <h3>Sandwiches</h3>
@@ -163,12 +168,11 @@
     <p>
         Linguine tossed with smoked bacon, diced tomatoes, light cream sauce, and parmigiano-reggiano
     </p>
-    </div>
-
-    <ul>
+      <ul>
         <li>Add Chicken $4</li>
         <li>Add Shrimp $7</li>
     </ul>
+    </div>
 
     <h5>Linguine and Meatballs <span class="price">$14</span></h5>
     <p>
@@ -188,14 +192,15 @@
     <h5>House-Cut Fries $4</h5>
 
     <!-- FOOTNOTES -->
+    <div class="footnotes">
     <img alt="event space" src="https://media-api.xogrp.com/images/df79b6c4-494b-4159-8363-328649227274~rs_412.240">
     <p>A $2.00 Split Plate Charge will be added when sharing an entree.</p>
     <p>18% Gratuity will be added to parties of 8 or more.</p>
     <p>Consuming raw or undercooked meat or fish may pose an increased risk of foodborne illness.</p>
     <p>All Prices Subject to Change</p>
-    <p>Book your next big event at The Redmoor.</p>
+    <p><span>Book your next big event at The Redmoor.</span></p>
     <p>Visit <a href="www.theredmoor.com">www.theredmoor.com</a> for the calendar of events and live music line up</p>
-
+    <div>
     <!-- Inspired by https://www.theredmoor.com/resources/menus/Food%20Menu%20with%20text.pdf -->
 </body>
 
